--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,14 +13,13 @@ body {
     
     color: #ffffff;
     background-color: #4aaaa5;
-    font-size: 36px;
+    font-size: 30px;
     padding-top: 20px;
     padding-bottom: 20px;
     padding-left: 20px;
     padding-right: 20px;
     border-block-end-color: #ffffff;
     text-indent: 150px;
-    left: 500px;
     z-index: 10;
     }
 
@@ -82,12 +81,25 @@ body {
     float: center;
 }
 
+
 #top{
     background-color: #ffffff;
     width: 960px;
     float: center;
 }
 
+.pic-set{
+    position: relative;
+    width: 150px;
+    height: 150px;
+}
+
+#t1{
+    background-color: #4aaaa5;
+    color: #ffffff;
+    float: center;
+
+}
 #p{
     color: #777777;
     background: #ffffff;
@@ -97,7 +109,7 @@ body {
     padding-left: 15px;
     padding-right: 100px;
     left: 155px;
-    top: 180px;
+    top: 130px;
     z-index: 2;
     float: center;
     width: 700px;
@@ -107,6 +119,7 @@ img {
     height: 275px;
     float: left;
     left: -50px;
+    top: 130px;
     z-index: 3;
 }
 
@@ -124,3 +137,77 @@ img {
     widows: 100px;
     margin: 0 auto;
 }
+
+#t2{
+    background-color: #4aaaa5;
+    color: #ffffff;
+    float: center;
+
+}
+#t3{
+    background-color: #4aaaa5;
+    color: #ffffff;
+    float: center;
+
+}
+#t4{
+    background-color: #4aaaa5;
+    color: #ffffff;
+    float: center;
+}
+div.gallery{
+    margin: 5px;
+    border: 1px solid #ffffff;
+    float: left;
+    width: 180px;
+}
+div.gallery img{
+    width: auto;
+    height: auto;
+}
+div.desc {
+    padding:15px;
+    text-align: center;
+}
+div.gallery {
+    margin: 5px;
+    border: 1px solid #ffffff;
+    float: left;
+    width: 180px;
+}
+
+div.gallery img {
+    width: 100%;
+    height: auto;
+}
+
+div.desc {
+    padding: 15px;
+    text-align: center;
+}
+.t1{
+     width: 300px;
+     height: 100px;
+     border: 1px solid
+    }
+ .t2{
+     width: 300px;
+     height: 100px;
+     border: 1px solid
+    }
+ .t3{
+     width: 300px;
+     height: 100px;
+     border: 1px solid
+    }
+ .t4{
+     width: 300px;
+     height: 100px;
+     border: 1px solid
+    }
+
+    input{
+        padding: 100 px;
+        width:70%;
+        float: center;
+        }
